# blockrs

./: .gitignore  Cargo.toml  README.md  setup.py
blockrs/: __init__.py
evogen/: __init__.py  blast.py  block.py  reader.py  utils.py  writer.py
old/: blast.py  reader.py  writer.py
src/: block.rs  fasta.rs  lib.rs
