[package]
name = "blockrs"
version = "0.6.1"
authors = ["Kent Kawashima <kentkawashima@gmail.com>"]
edition = "2018"

[lib]
name = "libblockrs"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.5"
features = ["extension-module"]

[dependencies.regex]
version = "1"

[dependencies.lazy_static]
version = "1.2.0"
